--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,7 @@ h3.agileits-title {
     margin-bottom: 0.5em;
     font-weight: 300;
     text-transform: uppercase;
+    text-shadow: 1px 1px;
 }
 .welcome h4 {
     font-size: 1.2em;
@@ -677,7 +678,7 @@ h3.agileits-title.WOStitle1 {
     -moz-transition: .5s all;
     transition: .5s all;
     background: #061d58;
-    margin-top: 20px;
+    /*margin-top: 20px;*/
 }
 .news-gridtext:hover{
 	box-shadow:-2px 4px 50px rgba(25, 13, 15, 0.38);
@@ -709,7 +710,7 @@ h3.agileits-title.WOStitle1 {
     transform: scale(1.5);
 }
 .news-WOSimgtext {
-    padding:2em 2.5em; 
+    padding:.5em 2.5em; 
     text-align: center;
     position: relative; 
 }
@@ -1464,8 +1465,11 @@ iframe#launcher {
     left: 0px;
 }
 .welcome-img h2 {
-     color: #fff;
+    color: #fff;
     text-align: center;
     border: 1px solid #3f699b;
     background: #284e54;
+    padding: 10px;
+    border-radius: 3px;
+    box-shadow: 2px 2px;
 }
